# egui-wasi-webgpu-demo

./: .gitignore  README.md  README.txt  pnpm-lock.yaml  pnpm-workspace.yaml
egui-wasi-webgpu-demo/pkg/wasi-renderer/: Cargo.toml
egui-wasi-webgpu-demo/pkg/wasi-renderer-demo/: Cargo.toml
egui-wasi-webgpu-demo/pkg/wasi-renderer-demo/src/: bindings.rs  lib.rs  widget_recorder.rs
egui-wasi-webgpu-demo/pkg/wasi-renderer-demo/src/bindings/: demo_world.rs
egui-wasi-webgpu-demo/pkg/wasi-renderer-demo/src/renderer/: texture.rs
egui-wasi-webgpu-demo/pkg/wasi-renderer-demo/src/supports/: egui_supports.rs  egui_texture.rs
egui-wasi-webgpu-demo/pkg/wasi-renderer-demo/src/widget_recorder/: recorder_counter.rs  recorder_main.rs  recorder_triangle.rs
egui-wasi-webgpu-demo/pkg/wasi-renderer/src/: bindings.rs  lib.rs  recorder_core.rs  render_core.rs  renderer.rs  widget_recorder.rs
egui-wasi-webgpu-demo/pkg/wasi-renderer/src/bindings/: immediate_renderer_world.rs
egui-wasi-webgpu-demo/pkg/wasi-renderer/src/render_core/: error.rs  mesh.rs  texture.rs
egui-wasi-webgpu-demo/pkg/wasi-renderer/src/renderer/: mesh.rs  texture.rs
egui-wasi-webgpu-demo/pkg/wasi-renderer/src/supports/: egui_texture.rs
egui-wasi-webgpu-demo/pkg/wasi-renderer/src/widget_recorder/: recorder_counter.rs  recorder_triangle.rs
egui-wasi-webgpu-demo/pkg/wasi-renderer/wit/: deps.toml
egui-wasi-webgpu-example/pkg/: Cargo.toml
egui-wasi-webgpu-example/pkg/confirm_exit/: Cargo.toml  vite.config.ts
egui-wasi-webgpu-example/pkg/confirm_exit/src/: lib.rs  recorder.rs
egui-wasi-webgpu-example/pkg/custom_font_style/: Cargo.toml  vite.config.ts
egui-wasi-webgpu-example/pkg/custom_font_style/src/: lib.rs  recorder.rs
egui-wasi-webgpu-example/pkg/custom_keypad/: Cargo.toml  tsconfig.json  vite.config.ts
egui-wasi-webgpu-example/pkg/custom_keypad/src/: keypad.rs  lib.rs  recorder.rs
egui-wasi-webgpu-example/pkg/custom_style/: Cargo.toml  vite.config.ts
egui-wasi-webgpu-example/pkg/custom_style/src/: lib.rs  recorder.rs
egui-wasi-webgpu-example/pkg/custom_window_frame/: Cargo.toml  vite.config.ts
egui-wasi-webgpu-example/pkg/custom_window_frame/src/: frame.rs  lib.rs  recorder.rs
egui-wasi-webgpu-example/pkg/example_core/: Cargo.toml
egui-wasi-webgpu-example/pkg/example_core/src/: bindings.rs  lib.rs  recorder.rs  supports.rs
egui-wasi-webgpu-example/pkg/example_core/src/bindings/: example_world.rs
egui-wasi-webgpu-example/pkg/example_core/src/supports/: command_supports.rs  egui_supports.rs  egui_texture.rs
egui-wasi-webgpu-example/pkg/hello_world/: Cargo.toml  vite.config.ts
egui-wasi-webgpu-example/pkg/hello_world/src/: bindings.rs  lib.rs  recorder.rs
egui-wasi-webgpu-example/pkg/hello_world/src/bindings/: example_world.rs
egui-wasi-webgpu-example/pkg/hello_world/src/supports/: command_supports.rs  egui_supports.rs  (+1 more)
egui-wasi-webgpu-example/pkg/keyboard_events/: Cargo.toml  vite.config.ts
egui-wasi-webgpu-example/pkg/keyboard_events/src/: lib.rs  recorder.rs
egui-wasi-webgpu-example/pkg/multiple_viewports/: Cargo.toml  vite.config.ts
egui-wasi-webgpu-example/pkg/multiple_viewports/src/: recorder.rs
egui-wasi-webgpu-example/pkg/popups/: Cargo.toml  vite.config.ts
egui-wasi-webgpu-example/pkg/popups/src/: recorder.rs
egui-wasi-webgpu-example/pkg/screenshot/: Cargo.toml  vite.config.ts
egui-wasi-webgpu-example/pkg/screenshot/src/: lib.rs  recorder.rs
egui-wasi-webgpu-example/pkg/wit/: deps.toml  interaction.wit  world.wit
(+175 files in other folders)
