[package]
name = "wasi-renderer-demo"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasi-renderer = { path = "../wasi-renderer" }
wit-bindgen = { version = "0.50.0", features = ["async", "async-spawn"] }
bytemuck = {version = "1.24.0", features = ["derive"] }
anyhow = "1.0.100"
thiserror = "2.0.18"
ahash = "0.8.12"
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg"] }
epaint = { version = "0.33.3", default-features = false, features = ["bytemuck"] }
egui = "0.33.3"

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
